...
      onPopInvokedWithResult: (didPop, result) {
        if (didPop) return;
        ref.read(folderBreadcrumbNotifierProvider.notifier).navigateBack();
      },
      child: Scaffold(
        appBar: AppBar(
          title: Text(breadcrumb.isEmpty ? 'Jobs' : breadcrumb.last.name),
        ),
        body: Column(
          children: [
            const _SearchField(),
            const _BreadcrumbHeader(),
            Expanded(
...
